# BlogCMS

./: .dockerignore  .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml.example  env-blogserver.example  manage.py  pyproject.toml  requirements.txt
cms/: admin.py  models.py  services.py  tasks.py  urls.py  views.py
cms/migrations/: 0001_initial.py  0002_auto_20200605_1251.py  0003_auto_20200605_1312.py  0004_article.py  0005_article_text.py  0006_auto_20200902_2226.py  0007_auto_20200902_2226.py  0008_auto_20200902_2228.py  0009_auto_20200902_2229.py  0010_auto_20200902_2232.py  0011_auto_20200902_2234.py  0012_auto_20200902_2236.py  0013_auto_20200902_2238.py  0014_auto_20200902_2239.py  0015_auto_20200902_2240.py  0016_auto_20200902_2240.py  0017_auto_20200902_2322.py  0018_price_hidden.py  0019_promocode.py  0020_auto_20201005_1443.py  0021_auto_20201005_2102.py  0022_auto_20201006_1048.py
cms/templatetags/: last_day_tag.py
config/: settings.py  urls.py  wsgi.py
files/: models.py  urls.py  views.py
files/migrations/: 0001_initial.py  0002_auto_20200603_1551.py  (+2 more)
fixtures/: email.json  price.json  status.json
followers/: admin.py  instagram.py  models.py  modulbank.py  views.py
nginx/: mysite.template  mysite.template.dev
orders/: models.py  services.py  urls.py  views.py
outer_modules/: instagram.py  modulbank.py
propitanie/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html  main.html
users/: context_processors.py  forms.py  models.py  tests.py  urls.py  views.py
videos/: models.py  urls.py  views.py
(+90 files in other folders)
