[tool.poetry]
name = "propitanie"
version = "0.1.0"
description = ""
authors = ["Alexandr Lelikov <lelikovas@gmail.com>"]
packages = [{ include = "propitanie" }]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"

[tool.poetry.dev-dependencies]
gunicorn = "^20.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
